src/test/deca/context/valid/created/avec_objet/rule2.7/2.7.deca
// Test pour la règle 2.7
// Date: 18/01/2024
// Auteur: Jerome

class ClasseDeBase {
    // Méthode avec une signature spécifique
    int methodeBase(int param) {
        println("Méthode de base avec param: " + param);
        return param;
    }
}

class ClasseDerivee extends ClasseDeBase {
    // Redéfinition de la méthode avec la même signature
    int methodeBase(int param) {
        int result = param;
        println("Méthode redéfinie avec param: " + param);
        return result * 2;  // Retourne un résultat modifié
    }
}

class Test {
    void testMethod() {
        ClasseDerivee objet = new ClasseDerivee();
        int result = objet.methodeBase(5);
        println("Résultat retourné: " + result);
    }
}

// Programme principal
{
    Test testProgramme = new Test();
    testProgramme.testMethod();
}
