src/test/deca/context/invalid/created/rule3.74/incomptypeofparam.deca
// Résultat erreur:
//    Types incompatibles de paramètres dans un appel de méthode (règle 3.74)
//
// Description:
//    Tests de programme incorrect contextuellement (types incompatibles de paramètres)
//
// Auteur:
//    Jerome
//
// Historique:
//    Créé le 16/01/2024

class MaClasse {
    int maMethode(int param) {
        return param * 2;
    }
}

class Test {
    int testMethod() {
        MaClasse obj = new MaClasse();
        return obj.maMethode("texte");
    }
}
